# permute_mmo_rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs  permuter.rs  spawn_state.rs  xorshift.rs
src/generation/: entity_result.rs  mod.rs  spawn_generator.rs  spawn_type.rs
src/permutation/: advance.rs  mod.rs  permute_meta.rs  permute_result.rs
src/structure/: mass_outbreak_set_8a.rs  mass_outbreak_spawner_8a.rs  massive_outbreak_area_8a.rs  massive_outbreak_set_8a.rs  massive_outbreak_spawner_8a.rs  massive_outbreak_spawner_status.rs  mod.rs
src/util/: area_util.rs  behavior_util.rs  calculations.rs  json_decoder.rs  mod.rs  permute_dump.rs  spawn_info.rs
tests/: forward_tests.rs
