[package]
name = "permute_mmo_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
no_std_io = { git = "https://github.com/zaksabeast/no_std_io.git" }
lazy_static = "1.4.0"
pkhex_rs = { git = "https://github.com/SteveCookTU/pkhex_rs.git", rev = "2ccfd22", default-features = false }
serde = { version = "1.0.147", features = ['derive'] }
serde_json = "1.0.87"
sysbot_rs = { git = "https://github.com/SteveCookTU/sysbot_rs.git"}
clap = { version = "4.0.18", features = ['derive']}